src/test/deca/context/invalid/our_tests/jb-wrong-Superclass1.deca
// Description:
//    Class extends a wrong superclass
//
// Resultats:
//    Should a contextual error (rule 2.3)
//
// Historique:
//    cree le 22/01/2017

class A extends float {
}
